--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
     "string": "cpp",
     "string_view": "cpp",
     "ranges": "cpp",
-    "system_error": "cpp"
+    "system_error": "cpp",
+    "functional": "cpp"
   }
 }
